# clientpolicy

./: .gitignore  Cargo.toml  Dockerfile  client-policy-controller.yml  default.nix  justfile  shell.nix
.devcontainer/: devcontainer.json
crds/: clientpolicy.yml  clientpolicybinding.yml  httpclientpolicy.yml
examples/: books-binding.yml  books-clientpolicy.yml  clientpolicy.yml  clientpolicybinding.yml
examples/booksapp/: authors-get.yml  authors-modify.yml  authors-probe.yml
grpc/: Cargo.toml
grpc/src/: lib.rs
k8s/api/: Cargo.toml
k8s/api/src/: client_policy.rs  client_policy_binding.rs  lib.rs
src/: client_policy.rs  defaults.rs  grpc.rs  index.rs  main.rs  pod.rs  route.rs  server.rs  service.rs
