[package]
name = "client-policy-controller"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "3", default-features = false, features = ["derive", "env", "std"] }
futures = { version = "0.3", default-features = false }
k8s-openapi = { version = "0.15", default-features = false, features = ["v1_23"] }
tracing = "0.1"

[dependencies.kube]
version = "0.74"
default-features = false
features = [
    "client",
    "derive",
    "native-tls",
    "runtime",
]

[dependencies.kubert]
version = "0.9"
default-features = false
features = [
    "clap",
    "runtime",
]

[dependencies.tokio]
version = "1"
features = ["macros", "parking_lot", "rt", "rt-multi-thread", "time"]
