[package]
name = "linkerd-client-policy"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.7"
anyhow = "1"
chrono = "0.4"
clap = { version = "3", default-features = false, features = [
    "derive",
    "env",
    "std",
] }
futures = { version = "0.3", default-features = false }
ipnet = "2"
k8s-openapi = { version = "0.15", features = ["v1_20"] }
parking_lot = "0.12"
tracing = "0.1"
comfy-table = "6.1.0"
client-policy-k8s-api = { path = "./k8s/api" }

[dependencies.kube]
version = "0.74"
default-features = false
features = ["admission", "derive", "native-tls"]

[dependencies.kubert]
version = "0.9"
default-features = false
features = ["clap", "index", "runtime", "server"]

[dependencies.linkerd-policy-controller-k8s-api]
git = "https://github.com/linkerd/linkerd2.git"
rev = "b7387820c315bd769380267235cfaa69aeef269d"

[dependencies.linkerd-policy-controller-core]
git = "https://github.com/linkerd/linkerd2.git"
rev = "b7387820c315bd769380267235cfaa69aeef269d"

[dependencies.tokio]
version = "1"
features = ["macros", "parking_lot", "rt", "rt-multi-thread", "time"]
