[workspace]
members = ["k8s/api"]

[package]
name = "linkerd-client-policy"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.7"
anyhow = "1"
chrono = "0.4"
comfy-table = "6.1.0"
clap = { version = "3", default-features = false, features = [
    "derive",
    "env",
    "std",
] }
client-policy-k8s-api = { path = "./k8s/api" }
futures = { version = "0.3", default-features = false }
humantime = "2"
ipnet = "2"
k8s-openapi = { version = "0.15", features = ["v1_20"] }
k8s-gateway-api = "0.6"
parking_lot = "0.12"
serde = "1"
serde_json = "1"
thiserror = "1"
tracing = "0.1"
async-stream = "0.3"
async-trait = "0.1"
drain = "0.1"
hyper = { version = "0.14", features = ["http2", "server", "tcp"] }
linkerd2-proxy-api = { git = "https://github.com/linkerd/linkerd2-proxy-api.git", branch = "alex/client-policy", features = [
    "client-policy",
] }
tonic = { version = "0.8", features = ["transport"]}

[dependencies.kube]
version = "0.74"
default-features = false
features = ["admission", "derive", "native-tls"]

[dependencies.kubert]
version = "0.9"
default-features = false
features = ["clap", "index", "runtime", "server"]

[dependencies.linkerd-policy-controller-k8s-api]
git = "https://github.com/linkerd/linkerd2.git"
rev = "b7387820c315bd769380267235cfaa69aeef269d"

[dependencies.linkerd-policy-controller-core]
git = "https://github.com/linkerd/linkerd2.git"
rev = "b7387820c315bd769380267235cfaa69aeef269d"

[dependencies.tokio]
version = "1"
features = ["macros", "parking_lot", "rt", "rt-multi-thread", "time"]
