[package]
name = "client-policy-grpc"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
async-stream = "0.3"
async-trait = "0.1"
drain = "0.1"
hyper = { version = "0.14", features = ["http2", "server", "tcp"] }
futures = { version = "0.3", default-features = false }
linkerd2-proxy-api = { git = "https://github.com/linkerd/linkerd2-proxy-api.git", branch = "alex/client-policy", features = [
    "client-policy",
] }
tokio = { version = "1", features = ["macros"] }
tonic = { version = "0.8", default-features = false }
tracing = "0.1"
