[package]
name = "client-policy-k8s-api"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
k8s-openapi = { version = "0.15", default-features = false, features = [
    "v1_20",
] }
kube = { version = "0.74", default-features = false, features = [
    "client",
    "derive",
    "runtime",
] }
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.8"
tokio = { version = "1", features = ["time"] }
tracing = "0.1"

[dependencies.linkerd-policy-controller-k8s-api]
git = "https://github.com/linkerd/linkerd2.git"
rev = "b7387820c315bd769380267235cfaa69aeef269d"